--- a/src/system-plugins/ui-manager/base.ejs
+++ b/src/system-plugins/ui-manager/base.ejs
@@ -76,7 +76,6 @@ ga('send', 'pageview');
 </script>
 
   <script type='text/javascript' src="js/libs/eventemitter2.js"></script>
-  <!--<script type='text/javascript' src="js/libs/bootstrap.min.js"></script>-->
 
   <script type='text/javascript' src='js/libs/gamepad.js'></script>
   <script type='text/javascript' src='js/utilities.js'></script>
@@ -106,7 +105,7 @@ ga('send', 'pageview');
 <style>
     body.loading #splash {
         opacity: 1;
-        z-index: 0;
+        z-index: 9000;
         background: linear-gradient(#CCCCCC, #34A1FF);
         margin: 0;
         padding: 0;
@@ -118,10 +117,10 @@ ga('send', 'pageview');
         left: 0;
         right: 0;
         bottom: 0;
-        transition: opacity 2s cubic-bezier(0, 0, 0.2, 1);
+        transition: opacity 1s cubic-bezier(0, 0, 0.2, 1);
         opacity: 0;
         will-change: opacity;
-        z-index: 9000;
+        z-index: 0;
         background: linear-gradient(#CCCCCC, #34A1FF);
         background-color: #34A1FF;
     }
@@ -170,14 +169,13 @@ ga('send', 'pageview');
         height: 100%;
         margin: -.1em 0 0 0;
         padding: 2em;
-        color: #eee;
+        color: #eee;       
     }
     
     .content h1 {
         font-family: 'Lato', sans-serif;
         margin-top: -1.3em;
         font-weight: 100;
-        font-size: 4em;
         font-size: 4em;
     }
     
@@ -187,11 +185,17 @@ ga('send', 'pageview');
         font-family: 'Lato', sans-serif;
         font-style: italic;
         font-size: 4em;
+        animation: fadein 3s;
     }
+    @keyframes fadein {
+        from { opacity: 0; }
+        to   { opacity: 1; }
+    }    
     
     #author {
         font-family: 'Open Sans', sans-serif;
         font-size: 1.5em;
+        animation: fadein 6s;
     }
     
     #loading {
