--- a/src/plugins/data-viewer/data.ejs
+++ b/src/plugins/data-viewer/data.ejs
@@ -5,7 +5,7 @@
   </style>
   <link rel="import" href="components/blackbox/orov-blackbox-downloader.html">
   <link rel="import" href="components/video/orov-video.html">
-  <div>
+  <div class="no-mousetrap">
   <p>{{__("This page allows interaction with past recoded dives.")}}</p>
   <p>{{__("This feature is in BETA. Please report problems at https://github.com/openrov/openrov-software/issues")}}</p>
   <orov-blackbox-downloader event-emitter="{{cockpitEventEmitter}}"/>
