Added back support for openrov-proxy connection

--- a/src/system-plugins/ui-manager/base.ejs
+++ b/src/system-plugins/ui-manager/base.ejs
@@ -325,6 +325,9 @@ ga('send', 'pageview');
   <platinum-sw-cache default-cache-strategy="<%=cacheMode%>" precache='["/js/replay.js"]'></platinum-sw-cache>
 </platinum-sw-register>
 
+<link rel="import" href="components/openrov-proxy/openrov-proxy.html">
+<openrov-proxy></openrov-proxy>
+
 <!-- Temporarily disabled pending solution for relative pathing -->
 <link rel="import" href="components/app-route/app-route.html">
 <link rel="import" href="components/app-route/app-location.html">
