Moved socket connect to after spash screen closes

--- a/src/system-plugins/ui-manager/base.ejs
+++ b/src/system-plugins/ui-manager/base.ejs
@@ -370,6 +370,9 @@ ga('send', 'pageview');
     console.info("on applet <%= scriplets[i].name %>");
     removeSplashScreen();
     window.removeEventListener('WebComponentsReady',fn);
+    if (window.OROV.startApp){
+      window.OROV.startApp();
+    }
   }
   window.addEventListener('WebComponentsReady', fn);  
   ga('set', 'page', '<%= scriplets[i].name %>');
