--- a/src/system-plugins/ui-manager/base.ejs
+++ b/src/system-plugins/ui-manager/base.ejs
@@ -172,7 +172,7 @@ ga('send', 'pageview');
     }
     
     .content {
-        background-color: #1D598D;
+        background: linear-gradient(#1D598D, #003851, #00101F);
         text-align: center;
         height: 100%;
         margin: -.1em 0 0 0;
