Corrected typographical errors in firmware update page

--- a/src/system-plugins/software-update-alert/_updates.ejs
+++ b/src/system-plugins/software-update-alert/_updates.ejs
@@ -27,7 +27,7 @@
 <img alt="OpenROV" src="themes/OpenROV/img/openrov.png" class="brand"><h4 style="color:white;float:right;">Updates in Progress</h4>
 </div>
 <paper-material elevation="1">
-<p>This feature is in Beta.  Anytime firmware for any of the MCUs on the system need to be updated, this screen will track the update.  When complete this screen will automatically redirect back to cockpit.  If the system failes to apply an updated you can use the retry button to try again.  The download button will download logs that can be submitted with a bug report.</p>
+<p>This feature is in Beta. When firmware for any of the MCUs on the system needs to be updated, this screen will track the progress of the update.  When complete, this screen will automatically redirect back to Cockpit. If the system fails to apply an update, you can use the retry button to try again. The "Download" button will download logs that can be submitted with a bug report.</p>
 </paper-material>
 <paper-material elevation="1">
     <orov-software-update-progress style="flex: auto;" event-emitter="{{cockpitEventEmitter}}"></orov-software-update-progress>
