Added functionality to clear the depth offset

--- a/src/plugins/diveprofile/diveprofile.ejs
+++ b/src/plugins/diveprofile/diveprofile.ejs
@@ -1,5 +1,6 @@
 <link rel="import" href="components/paper-button/paper-button.html">
 
 </div>
-  <paper-button raised onclick="window.cockpit.emit('plugin.diveProfile.zeroDepth')">{{__('Zero Depth')}}</paper-button>
+  <paper-button raised onclick="window.cockpit.emit('plugin.diveProfile.zeroDepth')">Zero Depth</paper-button>
+  <paper-button raised onclick="window.cockpit.emit('plugin.diveProfile.clearDepthOffset')">Clear Depth Offset</paper-button>
 </div>
