--- a/src/plugins/imu/imu.ejs
+++ b/src/plugins/imu/imu.ejs
@@ -1,6 +1,7 @@
 <link rel="import" href="components/paper-button/paper-button.html">
 
 </div>
-  <paper-button raised onclick="window.cockpit.emit('plugin.imu.zeroRollPitch')">{{__('Zero Roll & Pitch')}}</paper-button>
-  <paper-button raised onclick="window.cockpit.emit('plugin.imu.zeroYaw')">{{__('Zero Yaw')}}</paper-button>
+  <paper-button raised onclick="window.cockpit.emit('plugin.imu.zeroRollPitch')">Zero Roll & Pitch</paper-button>
+  <paper-button raised onclick="window.cockpit.emit('plugin.imu.clearRollPitchOffsets')">Clear Roll & Pitch Offsets</paper-button>
+  <paper-button raised onclick="window.cockpit.emit('plugin.imu.zeroYaw')">Zero Yaw</paper-button>
 </div>
